Right answer displayed

--- a/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.html
+++ b/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.html
@@ -2,5 +2,10 @@
     <app-answer-widget [answer] = "answer" (selected) = "selectAnswer($event)"></app-answer-widget>
 </div>
 <div *ngIf = "answerSelected">
-    Votre réponse est {{answerSelected.value}}
+    <div class="given_answer">Votre réponse:<br> 
+        {{answerSelected.value}}
+    </div>
+    <div class="right_answer">Réponse:<br>
+        {{rightAnswer.value}}
+    </div>
 </div>
