--- a/front-end/src/app/quiz-sequence/answer-widget/answer-widget.component.html
+++ b/front-end/src/app/quiz-sequence/answer-widget/answer-widget.component.html
@@ -1,3 +1,1 @@
-{{answer.value}}
-
-<button (click) = "answerSelected()">Selectionner cette réponse</button>
+<button (click) = "answerSelected()">{{answer.value}}</button>
