--- a/front-end/src/app/quiz-sequence/answer-widget/answer-widget.component.html
+++ b/front-end/src/app/quiz-sequence/answer-widget/answer-widget.component.html
@@ -1,1 +1,1 @@
-<button (click) = "answerSelected()">{{answer.value}}</button>
+<button class="button-card" (click) = "answerSelected()">{{answer.value}}</button>
