--- a/front-end/src/app/quiz-sequence/quiz-end/quiz-end.component.html
+++ b/front-end/src/app/quiz-sequence/quiz-end/quiz-end.component.html
@@ -1,6 +1,6 @@
 <!--<button class="button-card" routerLink= "/customers">Retour</button>-->
 
-<div class="">
+<div class="box">
     <h1>Bravo!</h1><!--Prénom-->
     <br>
     <button class="button-card" routerLink= "..">Recommencer</button>
