timers ok everywhere

--- a/front-end/src/app/quiz-sequence/quiz-summary/quiz-summary.component.html
+++ b/front-end/src/app/quiz-sequence/quiz-summary/quiz-summary.component.html
@@ -2,14 +2,15 @@
 
 <div class = "box">
     <div *ngIf = "quiz">
-        {{quiz.name}}
-        <br>
-        <app-display-right-answer [question] = "currentQuestionToDisplay"></app-display-right-answer>
+        <h2>-{{quiz.name}}-</h2>
+        <app-display-right-answer [question] = "currentQuestion"></app-display-right-answer>
     </div>
-    <div *ngIf = "questions.length!==0">
-        <button class="button-card" (click) = "changeQuestionToDisplay()">Suite</button>
+    <div *ngIf = "questions.length!==0; else elseBlock">
+        <button class="button-card" (click) = "nextQuestion()">Suite</button>
     </div>
-    <div *ngIf = "questions.length===0"> 
-        <button class="button-card" routerLink= "../quiz-end">Fin</button>
-    </div>
+    <ng-template #elseBlock>
+        <div *ngIf = "questions.length===0">
+            <button class="button-card" routerLink= "../quiz-end">Fin</button>
+        </div>
+    </ng-template>
 </div>
