--- a/front-end/src/app/quiz-sequence/question-widget/question-widget.component.html
+++ b/front-end/src/app/quiz-sequence/question-widget/question-widget.component.html
@@ -2,14 +2,10 @@
 
 <div class="box" *ngIf = "quiz">
     <h2>-{{quiz.name}}-</h2>
-<br>
-
-<div *ngIf = "currentQuestion">
+<div *ngIf = "currentQuestion; else elseBlock">
     <h4>{{currentQuestion.label}}</h4>
-    <app-answer-list-widget [answers] = "currentQuestion.answers" (selected) = "onSelectedAnswer($event)"></app-answer-list-widget>
+    <app-answer-list-widget [answers] = "currentQuestion.answers" (selected) = "onSelectedAnswer($event)" (next) = "onNext($event)"></app-answer-list-widget>
 </div>
-<button *ngIf="done()" class="button-card" routerLink= "./quiz-summary">Suite</button>
-
-<!--<button class="button-card" routerLink= "./quiz-summary">Suite</button>-->
-<!--<button class="button-card" routerLink= "./quiz-summary">Suite</button>-->
-<!--<button class="button-card" (click) = "changeQuestion()">Suite</button>-->
+<ng-template #elseBlock>
+    <button class="button-card" routerLink= "./quiz-summary">Recap</button>
+</ng-template>
