--- a/front-end/src/app/quiz-sequence/display-right-answer/display-right-answer.component.html
+++ b/front-end/src/app/quiz-sequence/display-right-answer/display-right-answer.component.html
@@ -1,4 +1,6 @@
-<h4>{{question.label}}</h4>
-<div *ngFor = "let answer of question.answers" >
-    <div *ngIf = "answer.isCorrect">{{answer.value}}</div>
+<div>
+    <h4>{{question.label}}</h4>
+    <div *ngFor = "let answer of question.answers" >
+        <div *ngIf = "answer.isCorrect">{{answer.value}}</div>
+    </div>
 </div>
