clear mock + demos

--- a/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.html
+++ b/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.html
@@ -14,6 +14,9 @@
             <div *ngIf = "rightAnswer" class="right_answer">Réponse:<br>
                 {{rightAnswer.value}}
             </div>
+            <div *ngIf = "!rightAnswer">Réponse:<br><!--A enlever ^^-->
+                 TOUS!!!
+            </div>
         </div>
         <ng-template #elseBlock>
             <div *ngIf = "rightAnswer" class="right_answer">Réponse:<br>
