--- a/front-end/src/app/quiz-sequence/quiz-summary/quiz-summary.component.html
+++ b/front-end/src/app/quiz-sequence/quiz-summary/quiz-summary.component.html
@@ -3,14 +3,15 @@
 <div class = "box">
     <div *ngIf = "quiz">
         <h2>-{{quiz.name}}-</h2>
-        <app-display-right-answer [question] = "currentQuestion"></app-display-right-answer>
+        <div *ngIf = "currentQuestion">
+            {{currentQuestion.label}}
+            <app-display-right-answer [answers] = "currentQuestion.answers"></app-display-right-answer>
+        </div>
     </div>
     <div *ngIf = "questions.length!==0; else elseBlock">
         <button class="button-card" (click) = "nextQuestion()">Suite</button>
     </div>
     <ng-template #elseBlock>
-        <div>
-            <button class="button-card" routerLink= "../quiz-end">Fin</button>
-        </div>
+        <button class="button-card" routerLink= "../quiz-end">Fin</button>
     </ng-template>
 </div>
