--- a/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.html
+++ b/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.html
@@ -4,9 +4,9 @@
     </div>
 </div>
 
-<div *ngIf="display === SHOW_ANSWER_COMPARAISON">
+<div *ngIf="display === SHOW_ANSWER_COMPARISON">
     <app-display-right-versus-answer-selected [answerSelected] = "answerSelected" [answers] = "answers"></app-display-right-versus-answer-selected>
-    <button class="button-card next-button" (click) = "skipComparaison()">Suivant</button>
+    <button class="button-card next-button" (click) = "skipComparison()">Suivant</button>
 </div>
 
 <div *ngIf="display === SHOW_RIGHT_ANSWER ">
