--- a/front-end/src/app/quiz-sequence/answer-widget/answer-widget.component.scss
+++ b/front-end/src/app/quiz-sequence/answer-widget/answer-widget.component.scss
@@ -1,1 +1,6 @@
 @import '../../../styles/card.scss';
+
+.answer{
+    font-size: 1em;//100%; --> à voir... essayer d'avoir les 4     1 2
+    margin: 0.5em; //                                              3 4 peu importe l'écran
+}
