--- a/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.html
+++ b/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="display === SHOW_ANSWER_TO_CHOOSE" class="box-answers">
+<!--<div *ngIf="display === SHOW_ANSWER_TO_CHOOSE" class="box-answers">
     <div class="answer-li" *ngFor = "let answer of answers">
         <app-answer-widget [answer] = "answer" (selected) = "onAnswerSelected($event)"></app-answer-widget>
     </div>
@@ -12,4 +12,4 @@
 <div *ngIf="display === SHOW_RIGHT_ANSWER ">
     <app-display-right-answer [answers]=answers></app-display-right-answer>
     <button class="button-card next-button" (click) = "nextQuestion()">Suivant</button>
-</div>
+</div>-->
