Les questions sont pops en cas d'erreur de l'acceuilli le recap s'adapte à nouveau lorsque la réponse sélectionnée est juste

--- a/front-end/src/app/quiz-sequence/display-right-versus-answer-selected/display-right-versus-answer-selected.component.html
+++ b/front-end/src/app/quiz-sequence/display-right-versus-answer-selected/display-right-versus-answer-selected.component.html
@@ -1,5 +1,5 @@
 <div class="box">
-    <div *ngIf="answerSelected !==null; else elseBlock" class="box-answers">
+    <div *ngIf="answerSelected !==null && answerSelected!=rightAnswer; else elseBlock" class="box-answers">
         <div class="answer-li">Votre réponse:<br>
             {{answerSelected.value}}
         </div>
