--- a/front-end/src/app/quiz-sequence/answer-widget/answer-widget.component.html
+++ b/front-end/src/app/quiz-sequence/answer-widget/answer-widget.component.html
@@ -1,1 +1,1 @@
-<button class="button-card answer" (click) = "answerSelected()">{{answer.value}}</button>
+<button class="answer-button answer" (click) = "answerSelected()">{{answer.value}}</button>
