--- a/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.scss
+++ b/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.scss
@@ -1,23 +1,20 @@
 @import '../../../styles/card.scss';
 
-.box-answers {
-    height: 50%;
-    width: 40%;
+.answers-list {
+    width: 100%;
+    height: 100%;
     margin: auto;
-    padding: 1em;
-    border-style: solid;
-    border-color:  rgb(179, 11, 89);
-    display: flex;
-    flex-wrap: wrap;
+    //border-style: solid;
+    //border-color:  rgb(179, 11, 89);
     text-align: center;
-}
-
-.answer-li {
     margin: auto;
+    display: table;
 }
 
-/*.next-button{
-    float: right;
-    margin-top: 10%;
-    margin-right: 5%;
-}*/
+.grid { // ok pour le moment mais faudrait le rendre plus générique
+    display: grid;
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
+    grid-gap: 10px;
+    grid-auto-rows: 200px;
+}
+// Lien utile : https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Auto-placement_in_CSS_Grid_Layout
