--- a/front-end/src/app/quiz-sequence/answer-widget/answer-widget.component.scss
+++ b/front-end/src/app/quiz-sequence/answer-widget/answer-widget.component.scss
@@ -1,6 +1,18 @@
 @import '../../../styles/card.scss';
+@import '../../../styles/variables.scss';
 
 .answer{
     font-size: 1em;//100%; --> à voir... essayer d'avoir les 4     1 2
     margin: 0.5em; //                                              3 4 peu importe l'écran
+}
+
+.answer-button{
+    background-color: $white;
+    border: solid 1px $blue;
+    color: $blue;
+    font-weight: bold;
+    padding: 0.5em 1em;
+    font-size: xx-large;
+    width: 100%;
+    height: 100%;
 }
