--- a/front-end/src/app/quiz-sequence/question-widget/question-widget.component.html
+++ b/front-end/src/app/quiz-sequence/question-widget/question-widget.component.html
@@ -1,11 +1,12 @@
 <button class="button-card" routerLink= "/customers">Retour</button>
 
-<div class="box" *ngIf = "quiz">
+<div class = "box" *ngIf = "quiz">
     <h2>-{{quiz.name}}-</h2>
-<div *ngIf = "currentQuestion; else elseBlock">
-    <h4>{{currentQuestion.label}}</h4>
-    <app-answer-list-widget [answers] = "currentQuestion.answers" (selected) = "onSelectedAnswer($event)" (next) = "onNext($event)"></app-answer-list-widget>
+    <div class="box-herit" *ngIf = "currentQuestion; else elseBlock">
+        <h4>{{currentQuestion.label}}</h4>
+        <app-answer-list-widget [answers] = "currentQuestion.answers" (selected) = "onSelectedAnswer($event)" (next) = "onNext($event)"></app-answer-list-widget>
+    </div>
+    <ng-template #elseBlock>
+        <button class="button-card" routerLink= "./quiz-summary">Recap</button>
+    </ng-template>
 </div>
-<ng-template #elseBlock>
-    <button class="button-card" routerLink= "./quiz-summary">Recap</button>
-</ng-template>
