--- a/front-end/src/app/quiz-sequence/question-widget/question-widget.component.scss
+++ b/front-end/src/app/quiz-sequence/question-widget/question-widget.component.scss
@@ -6,8 +6,17 @@
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     border-style: solid;
+    border-radius: 10px;;
     border-color:  rgb(243, 58, 144);
+    text-align: center;
+}
+
+.box-herit{
+    height: 80%;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
 }
