--- a/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.scss
+++ b/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.scss
@@ -13,8 +13,8 @@
 
 .grid { // ok pour le moment mais faudrait le rendre plus générique
     display: grid;
-    grid-template-columns: repeat(2, minmax(200px, 1fr));
+    grid-template-columns: repeat(2, minmax(50%, 1fr));
     grid-gap: 10px;
-    grid-auto-rows: 200px;
+    grid-auto-rows: 100%;
 }
 // Lien utile : https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Auto-placement_in_CSS_Grid_Layout
