--- a/front-end/src/app/quiz-sequence/question-widget/question-widget.component.scss
+++ b/front-end/src/app/quiz-sequence/question-widget/question-widget.component.scss
@@ -13,10 +13,28 @@
     text-align: center;
 }
 
-.box-herit{
+.box-inherit{
     height: 80%;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+}
+
+.frame{
+    height: 120px;//à revoir
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: dashed;
+    border-color:  rgb(243, 58, 144);
+}
+
+.thumbnail {
+    object-fit: cover;
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;//80px;
+    width: 100%;//100px
 }
