--- a/front-end/src/app/quiz-sequence/answer-widget/answer-widget.component.scss
+++ b/front-end/src/app/quiz-sequence/answer-widget/answer-widget.component.scss
@@ -4,15 +4,25 @@
 .answer{
     font-size: 1em;//100%; --> à voir... essayer d'avoir les 4     1 2
     margin: 0.5em; //                                              3 4 peu importe l'écran
+    font-size: x-large;//--> responsive then
+    width: 80%;
+    height: 80%;
 }
 
-.answer-button{
-    background-color: $white;
-    border: solid 1px $blue;
-    color: $blue;
-    font-weight: bold;
-    padding: 0.5em 1em;
-    font-size: xx-large;
-    width: 100%;
-    height: 100%;
+.frame{
+    height: 100px;//à revoir
+    width: 130px;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: dashed;
+    border-color:  rgb(243, 58, 144);
+}
+
+.thumbnail {
+    object-fit: cover;
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;//80px;
+    width: 100%;//100px
 }
