images in play quiz ok

--- a/front-end/src/app/quiz-sequence/display-right-answer/display-right-answer.component.html
+++ b/front-end/src/app/quiz-sequence/display-right-answer/display-right-answer.component.html
@@ -1,6 +1,7 @@
 <div *ngIf = "rightAnswer">
-    {{rightAnswer.value}}
+    <div *ngIf="rightAnswer.value">{{rightAnswer.value}}</div>
+    <div *ngIf="image.url" class="frame"><img class="thumbnail" [src]="getImgSrc()" alt="answer image"></div>
 </div>
-<div *ngIf = "!rightAnswer">Réponse:<br>
+<!--<div *ngIf = "!rightAnswer">Réponse:<br>
     TOUS!!!
-</div>
+</div>-->
