--- a/front-end/src/app/quiz-sequence/quiz-summary/quiz-summary.component.scss
+++ b/front-end/src/app/quiz-sequence/quiz-summary/quiz-summary.component.scss
@@ -11,3 +11,21 @@
     border-color:  rgb(243, 58, 144);
     text-align: center;
 }
+
+.frame{
+    height: 100px;//à revoir
+    width: 130px;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: dashed;
+    border-color:  rgb(243, 58, 144);
+}
+
+.thumbnail {
+    object-fit: cover;
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;//80px;
+    width: 100%;//100px
+}
