--- a/front-end/src/app/quiz-sequence/display-right-answer/display-right-answer.component.scss
+++ b/front-end/src/app/quiz-sequence/display-right-answer/display-right-answer.component.scss
@@ -1,17 +1,1 @@
-.frame{
-    height: 100px;//à revoir
-    width: 130px;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: dashed;
-    border-color:  rgb(243, 58, 144);
-}
-
-.thumbnail {
-    object-fit: cover;
-    display: block; 
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;//80px;
-    width: 100%;//100px
-}
+@import '../../../styles/images.scss';
