--- a/front-end/src/app/quiz-sequence/display-right-versus-answer-selected/display-right-versus-answer-selected.component.scss
+++ b/front-end/src/app/quiz-sequence/display-right-versus-answer-selected/display-right-versus-answer-selected.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/images.scss';
+
 .box-answers {
     height: 50%;
     width: 40%;
@@ -12,22 +14,4 @@
 
 .answer-li {
     margin: auto;
-}
-
-.frame{
-    height: 100px;//à revoir
-    width: 130px;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: dashed;
-    border-color:  rgb(243, 58, 144);
-}
-
-.thumbnail {
-    object-fit: cover;
-    display: block; 
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;//80px;
-    width: 100%;//100px
 }
