--- a/front-end/src/app/quiz-sequence/quiz-summary/quiz-summary.component.scss
+++ b/front-end/src/app/quiz-sequence/quiz-summary/quiz-summary.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/card.scss';
+@import '../../../styles/images.scss';
 
 .box{
     margin-top: 20px;
@@ -10,22 +11,4 @@
     border-style: solid;
     border-color:  rgb(243, 58, 144);
     text-align: center;
-}
-
-.frame{
-    height: 100px;//à revoir
-    width: 130px;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: dashed;
-    border-color:  rgb(243, 58, 144);
-}
-
-.thumbnail {
-    object-fit: cover;
-    display: block; 
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;//80px;
-    width: 100%;//100px
 }
