--- a/front-end/src/app/quiz-sequence/question-widget/question-widget.component.scss
+++ b/front-end/src/app/quiz-sequence/question-widget/question-widget.component.scss
@@ -3,7 +3,7 @@
 
 .box{
     margin-top: 5px;
-    height: 100%;//à revoir
+    height: 85%;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
