css il reste a centrer horizontalement mais ça m'a l'air dur

--- a/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.html
+++ b/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 
-<div *ngIf="display === SHOW_ANSWER_COMPARISON">
+<div class ="answer-comparison" *ngIf="display === SHOW_ANSWER_COMPARISON">
     <app-display-right-versus-answer-selected [answerSelected] = "answerSelected" [answers] = "answers"></app-display-right-versus-answer-selected>
     <button class="button-card next-button" (click) = "skipComparison()">Suivant</button>
 </div>
