--- a/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.scss
+++ b/front-end/src/app/quiz-sequence/answer-list-widget/answer-list-widget.component.scss
@@ -17,4 +17,8 @@
     grid-gap: 10px;
     grid-auto-rows: 50%;
 }
+
+.answer-comparison{
+    //height: 90%;
+}
 // Lien utile : https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Auto-placement_in_CSS_Grid_Layout
