--- a/front-end/src/app/quiz-sequence/display-right-answer/display-right-answer.component.html
+++ b/front-end/src/app/quiz-sequence/display-right-answer/display-right-answer.component.html
@@ -1,5 +1,5 @@
-<div *ngIf = "rightAnswer">
-    <div *ngIf="rightAnswer.value">{{rightAnswer.value}}</div>
+<div class = "take-all-space" *ngIf = "rightAnswer">
+    <div *ngIf="rightAnswer.value" class = "label-for-recap">{{rightAnswer.value}}</div>
     <div *ngIf="image.url" class="frame"><img class="thumbnail" [src]="getImgSrc()" alt="answer image"></div>
 </div>
 <div *ngIf = "!rightAnswer">Réponse:<br>
