--- a/front-end/src/app/quiz-sequence/display-right-answer/display-right-answer.component.scss
+++ b/front-end/src/app/quiz-sequence/display-right-answer/display-right-answer.component.scss
@@ -1,1 +1,16 @@
 @import '../../../styles/images.scss';
+@import '../../../styles/card.scss';
+
+
+.label-for-recap{
+    font-size: larger;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.frame{
+    width: 60%;
+    max-width: 350px;
+    height: 40%;
+    max-height: 400px;
+}
