--- a/front-end/src/app/quiz-sequence/question-widget/question-widget.component.scss
+++ b/front-end/src/app/quiz-sequence/question-widget/question-widget.component.scss
@@ -3,22 +3,12 @@
 
 .box{
     margin-top: 5px;
-    height: 85%;
-    width: 80%;
+    height: 93%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 5px;
     border-style: solid;
     border-radius: 10px;;
     border-color:  rgb(243, 58, 144);
-    text-align: center;
-}
-
-.box-inherit{
-    height: 80%;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
     text-align: center;
 }
 
@@ -29,4 +19,11 @@
     width: 100%;
     height: 80%;
     text-align: center;
+    cursor: pointer;;
   }
+
+.question-image {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 15%;
+}
