--- a/front-end/src/app/quiz-sequence/question-widget/question-widget.component.scss
+++ b/front-end/src/app/quiz-sequence/question-widget/question-widget.component.scss
@@ -1,9 +1,9 @@
 @import '../../../styles/card.scss';
 @import '../../../styles/images.scss';
+@import '../../../styles/layout.scss';
 
 .box{
     margin-top: 5px;
-    height: 93%;
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
@@ -25,5 +25,9 @@
 .question-image {
     margin-left: auto;
     margin-right: auto;
-    max-width: 15%;
+    max-width: 200px;
+}
+.labelandimage{
+    margin-left: auto;
+    margin-right: auto;
 }
