--- a/front-end/src/app/quiz-sequence/quiz-summary/quiz-summary.component.scss
+++ b/front-end/src/app/quiz-sequence/quiz-summary/quiz-summary.component.scss
@@ -1,5 +1,6 @@
 @import '../../../styles/card.scss';
 @import '../../../styles/images.scss';
+@import '../../../styles/layout.scss';
 
 .box{
     margin-top: 20px;
@@ -11,4 +12,11 @@
     border-style: solid;
     border-color:  rgb(243, 58, 144);
     text-align: center;
+}
+
+.frame{
+    width: 100%;
+    height: 100%;
+    max-width: 350px;
+
 }
